monitoring/deploy/grafana/06-grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    training-monitoring: "true"
  name: grafana
spec:
  clusterIP: 172.30.101.198
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: grafana
  sessionAffinity: None
  type: ClusterIP
